<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="main_tabs_favorites">Я смотрю</string>
    <string name="main_tabs_bookmarks">Закладки</string>
    <string name="main_tabs_history">История</string>
    <string name="main_tabs_movies">Фильмы</string>
    <string name="main_tabs_series">Сериалы</string>
    <string name="main_tabs_cartoons">Мультики</string>
    <string name="main_tabs_anime">Аниме</string>
    <string name="main_tabs_f4k">4К</string>
    <string name="main_tabs_concerts">Концерты</string>
    <string name="main_tabs_docmovies">Док. Фильмы</string>
    <string name="main_tabs_docseries">Док. Сериалы</string>
    <string name="main_tabs_tvshows">ТВ Шоу</string>
    <string name="main_tabs_collections">Подборки</string>
    <string name="main_tabs_sport_tv">Спорт ТВ</string>
    <string name="main_tabs_settings">Настройки</string>
    <string name="main_tabs_search">Поиск</string>
    <string name="main_tabs_home">Главная</string>

    <string name="main_press_back_again_to_exit">Нажми «Назад» ещё раз, чтобы выйти</string>

    <string name="home_section_continue_watching">Я смотрю</string>
    <string name="home_section_fresh">Новинки</string>
    <string name="home_section_popular_movies">Популярные фильмы</string>
    <string name="home_section_popular_series">Популярные сериалы</string>
    <string name="home_section_watch_later">Буду смотреть</string>
    <string name="home_section_bookmarks">Мои закладки</string>
    <string name="home_section_collections">Подборки</string>
    <string name="home_section_hot">Горячие</string>
    <string name="genre_all">Все</string>
    <string name="content_section_fresh">Новинки</string>
    <string name="content_section_popular">Популярные</string>
    <string name="content_section_hot">Горячие</string>
    <string name="content_section_all">Все</string>
    <string name="settings_startup_tab">Стартовая вкладка</string>
    <string name="settings_menu_sections_title">Секции меню</string>
    <string name="settings_menu_sections_description">Что показывать в меню. Скрытые секции не предлагаются как стартовая вкладка</string>
    <string name="settings_menu_section_is_startup_tab">Выбрана стартовой вкладкой</string>
    <string name="settings_show_anime">Аниме в общих списках</string>
    <string name="settings_show_anime_description">Не влияет на личные списки и вкладку «Аниме»</string>
    <string name="settings_hide_watched">Скрывать просмотренное</string>
    <string name="settings_hide_watched_description">Полностью просмотренное не показывается на главной и в каталоге. Не влияет на поиск, отдельные экраны закладок и историю</string>
    <string name="settings_auto_trailer">Трейлер при наведении</string>
    <string name="settings_auto_trailer_description">Если задержаться на карточке, вместо кадра начнёт играть трейлер со звуком</string>
</resources>
